--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,16 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "firebase": "^10.12.2",
+    "pug": "^3.0.3",
+    "pug-plain-loader": "^1.1.0",
+    "sass": "^1.77.6",
+    "sass-loader": "^14.2.1",
+    "vite": "^5.3.1",
     "vue": "^3.2.13",
+    "vue-advanced-chat": "^2.1.0",
     "vue-markdown": "^2.2.4",
     "vue-router": "^4.3.2"
   },
