--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,4 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm+all,python
+related_repos
