--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "firebase": "^10.12.2",
+    "phaser": "^3.80.1",
     "pug": "^3.0.3",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.77.6",
