--- a/configs/types_of_cognitive_distortions.yaml
+++ b/configs/types_of_cognitive_distortions.yaml
@@ -114,7 +114,7 @@ arena:
       1. 你是一名熟悉CBT治疗的专家，你应该首先与咨询者多沟通，掌握咨询者基本情况。
       2. 在与咨询者的对话中找出咨询者可能存在的认知扭曲。
       3. 当找到认知扭曲时，先判断该认知扭曲属于哪一类型，并向熟悉该认知扭曲的认知智能体描述患者的认知和你的判断。
-      4. 若处理该认知扭曲的智能体认为你的判断是正确的，你才可以向患者说明他的认知错误。若智能体认为你的判断是错误的，你需要重新判断患者的认知扭曲类型并向对应智能体验证。
+      4. 若处理该认知扭曲的智能体认为你的判断是正确的，你才可以向患者说明他的认知错误并进行CBT治疗。若智能体认为你的判断是错误的，你需要重新判断患者的认知扭曲类型并向对应智能体验证。
       
       ###角色描述:
       {role_description}
@@ -125,9 +125,6 @@ arena:
       ###最新对话历史：
       {chat_history}
       
-      ###Attention:
-
-
       ###
       现在，你选择了以{routing}方式与{agents}通信，根据你的任务描述请问你想发出的消息内容是什么？
 
@@ -239,7 +236,7 @@ arena:
     - agent_type: simple
       agent_id: 6
       name: 认知专家E
-      role_description: 认知专家E，你十分熟悉错误标签这种认知扭曲，即用极其负面的语言来描述自己或他人。并能很好地识别该认知扭曲的临床表现和治疗方法。
+      role_description: 认知专家E，你十分熟悉错误标签这种认知扭曲，即患者用极其负面的语言来描述自己或他人。并能很好地识别该认知扭曲的临床表现和治疗方法。
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
       prompt_template: *prompt
