Refactor routing code to use XinHaiRoutingMessage

--- a/configs/types_of_cognitive_distortions.yaml
+++ b/configs/types_of_cognitive_distortions.yaml
@@ -15,8 +15,8 @@ workers:
   - worker_type: storage
 
 arena:
-  allowed_routing_types: &allowed_routing_types |-
-    - [Unicast]
+  allowed_routing_types: &allowed_routing_types
+    - "[Unicast]"
   routing_strategy: static
   prompts:
     routing_prompt: &routing_prompt |-
