--- a/configs/types_of_cognitive_distortions.yaml
+++ b/configs/types_of_cognitive_distortions.yaml
@@ -68,7 +68,6 @@ arena:
       ###可以采用的通讯方式有：
       {routing_descriptions}
       
-      ###Attention:
       
       ###样例：
       {{"method": "[SingleCast]", "target": [1], "description": }}
@@ -129,7 +128,7 @@ arena:
       {chat_history}
       
       ###
-      现在，你选择了以{routing}方式与{agents}通信，根据你的任务描述请问你想发出的消息内容是什么？
+      现在，你选择了以{routing}方式与{agents}通信。记住你的任务描述，根据你的角色和通信对象，请问你想发出的消息内容是什么？
 
       ###返回格式：
 
@@ -148,13 +147,13 @@ arena:
         ###最新对话历史：
         {chat_history}
         
-        现在，你选择了以{routing}方式与{agents}通信，根据你的任务描述，请问你想发出的消息内容是什么？
+        现在，你选择了以{routing}方式与{agents}通信。记住你的任务，然后根据你的角色描述和通信对象，请问你想发出的消息内容是什么？
 
   name: XinHai CBT
 
   environment:
     environment_type: simple
-    environment_id: xinhai_cbt_simulation_5
+    environment_id: xinhai_cbt_simulation_6
     controller_address: http://localhost:5001
     topology:
       edges:
@@ -166,12 +165,16 @@ arena:
         - 1->5
         - 1->6
         - 1->7
+        - 1->8
+        - 1->9
         - 2->1
         - 3->1
         - 4->1
         - 5->1
         - 6->1
         - 7->1
+        - 8->1
+        - 9->1
 
     max_turns: 10
 
@@ -203,7 +206,7 @@ arena:
     - agent_type: simple
       agent_id: 2
       name: 认知专家A
-      role_description: 认知专家A，你十分熟悉非黑即白这种认知扭曲，即患者将经验分为黑白两类(对和错)。并能很好地识别该认知扭曲的临床表现和治疗方法。
+      role_description: 认知专家A，你十分熟悉两极化思维这种认知扭曲，即患者不是根据事物本身的多种可能作出决策，而是一种对事物的极端判断。例如：如果我不完美，我就是失败者。并能很好地识别该认知扭曲的临床表现和治疗方法。
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
       prompt_template: *prompt
@@ -215,7 +218,7 @@ arena:
     - agent_type: simple
       agent_id: 3
       name: 认知专家B
-      role_description: 认知专家B，你十分熟悉以偏概全这种认知扭曲，即患者根据有限部分对整体做出快速判断。并能很好地识别该认知扭曲的临床表现和治疗方法。
+      role_description: 认知专家B，你十分熟悉以偏概全这种认知扭曲，即患者基于有限的经验，得出十分泛化的结论。例如：这里画错了，我整个画都毁了。并能很好地识别该认知扭曲的临床表现和治疗方法。
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
       prompt_template: *prompt
@@ -227,7 +230,7 @@ arena:
     - agent_type: simple
       agent_id: 4
       name: 认知专家C
-      role_description: 认知专家C，你十分熟悉心里过滤这种认知扭曲，即患者容易过滤掉积极的因素并过度关注情况的消息方面。并能很好地识别该认知扭曲的临床表现和治疗方法。
+      role_description: 认知专家C，你十分熟悉感情推理这种认知扭曲，即患者把感受视为事实。例如：我感到有点紧张，今天肯定有坏事发生。并能很好地识别该认知扭曲的临床表现和治疗方法。
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
       prompt_template: *prompt
@@ -239,7 +242,7 @@ arena:
     - agent_type: simple
       agent_id: 5
       name: 认知专家D
-      role_description: 认知专家D，你十分熟悉个性化这种认知扭曲，即患者将外部事件归因于自己，即使没有依据将这些事件与自己联系起来。并能很好地识别该认知扭曲的临床表现和治疗方法。
+      role_description: 认知专家D，你十分熟悉个性化这种认知扭曲，即患者把事情看成是针对自己的，尽管自己可以与该事情并无关系。例如：他很安静，我想是不是我做错了什么。并能很好地识别该认知扭曲的临床表现和治疗方法。
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
       prompt_template: *prompt
@@ -251,7 +254,7 @@ arena:
     - agent_type: simple
       agent_id: 6
       name: 认知专家E
-      role_description: 认知专家E，你十分熟悉错误标签这种认知扭曲，即患者用极其负面的语言来描述自己或他人。并能很好地识别该认知扭曲的临床表现和治疗方法。
+      role_description: 认知专家E，你十分熟悉错误标签这种认知扭曲，即患者用行为和特征来定义一个人。例如：我说了一些尴尬的话，我是一个失败者。并能很好地识别该认知扭曲的临床表现和治疗方法。
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
       prompt_template: *prompt
@@ -263,7 +266,31 @@ arena:
     - agent_type: simple
       agent_id: 7
       name: 认知专家F
-      role_description: 认知专家F，你十分熟悉读心术这种认知扭曲，即患者根据自己的感知或解释，对他人的想法、感受或意图做出假设。并能很好地识别该认知扭曲的临床表现和治疗方法。
+      role_description: 认知专家F，你十分熟悉读心术这种认知扭曲，即患者假设自己能知道别人的想法。例如：她没有与我打招呼，她肯定很讨厌我。并能很好地识别该认知扭曲的临床表现和治疗方法。
+      routing_prompt_template: *routing_prompt
+      summary_prompt_template: *summary_prompt
+      prompt_template: *prompt
+      locale: zh
+      allowed_routing_types: *allowed_routing_types
+      llm: Qwen1.5-7B-Chat
+      api_key: EMPTY
+      api_base: http://localhost:40007/v1
+    - agent_type: simple
+      agent_id: 8
+      name: 认知专家G
+      role_description: 认知专家G，你十分熟悉灾难化这种认知扭曲，即患者总是关注最坏的情况。例如：如果我面试回答不好问题，我一会失去这份工作，最后一无所有。并能很好地识别该认知扭曲的临床表现和治疗方法。
+      routing_prompt_template: *routing_prompt
+      summary_prompt_template: *summary_prompt
+      prompt_template: *prompt
+      locale: zh
+      allowed_routing_types: *allowed_routing_types
+      llm: Qwen1.5-7B-Chat
+      api_key: EMPTY
+      api_base: http://localhost:40007/v1
+    - agent_type: simple
+      agent_id: 9
+      name: 认知专家H
+      role_description: 认知专家H，你十分熟悉应该陈述这种认知扭曲，即患者为自己设定不切实际的期望。例如：我不需要任何帮助，我很独立。并能很好地识别该认知扭曲的临床表现和治疗方法。
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
       prompt_template: *prompt
