--- a/examples/CBTAgency/configs/types_of_cognitive_distortions.yaml
+++ b/examples/CBTAgency/configs/types_of_cognitive_distortions.yaml
@@ -20,6 +20,8 @@ arena:
     - "[Unicast]"
   allowed_routing_types_2: &allowed_routing_types_2
     - "[Unicast]"
+  format_prompt_type: &format_prompt_type
+    "[FormatResponse]"  
   routing_strategy: static
   prompts:
     routing_prompt: &routing_prompt |-
@@ -231,6 +233,7 @@ arena:
       prompt_template: *consultant_prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types_1
+      format_prompt_type: *format_prompt_type
       llm: alibaba/Qwen2-72B-Instruct
       api_key: sk-lsfjohamzsiaojqffmuagcgveqicoaftfnnwcijqyrarcnnp
       api_base: https://api.siliconflow.cn/v1
@@ -243,6 +246,7 @@ arena:
       prompt_template: *counselor_prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types_1
+      format_prompt_type: *format_prompt_type
       llm: alibaba/Qwen2-72B-Instruct
       api_key: sk-lsfjohamzsiaojqffmuagcgveqicoaftfnnwcijqyrarcnnp
       api_base: https://api.siliconflow.cn/v1
@@ -255,6 +259,7 @@ arena:
       prompt_template: *prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types_1
+      format_prompt_type: *format_prompt_type
       llm: alibaba/Qwen2-72B-Instruct
       api_key: sk-lsfjohamzsiaojqffmuagcgveqicoaftfnnwcijqyrarcnnp
       api_base: https://api.siliconflow.cn/v1
@@ -267,6 +272,7 @@ arena:
       prompt_template: *prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types_1
+      format_prompt_type: *format_prompt_type
       llm: alibaba/Qwen2-72B-Instruct
       api_key: sk-lsfjohamzsiaojqffmuagcgveqicoaftfnnwcijqyrarcnnp
       api_base: https://api.siliconflow.cn/v1
@@ -279,6 +285,7 @@ arena:
       prompt_template: *prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types_1
+      format_prompt_type: *format_prompt_type
       llm: alibaba/Qwen2-72B-Instruct
       api_key: sk-lsfjohamzsiaojqffmuagcgveqicoaftfnnwcijqyrarcnnp
       api_base: https://api.siliconflow.cn/v1
@@ -291,6 +298,7 @@ arena:
       prompt_template: *prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types_1
+      format_prompt_type: *format_prompt_type
       llm: alibaba/Qwen2-72B-Instruct
       api_key: sk-lsfjohamzsiaojqffmuagcgveqicoaftfnnwcijqyrarcnnp
       api_base: https://api.siliconflow.cn/v1
@@ -303,6 +311,7 @@ arena:
       prompt_template: *prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types_1
+      format_prompt_type: *format_prompt_type
       llm: alibaba/Qwen2-72B-Instruct
       api_key: sk-lsfjohamzsiaojqffmuagcgveqicoaftfnnwcijqyrarcnnp
       api_base: https://api.siliconflow.cn/v1
@@ -315,6 +324,7 @@ arena:
       prompt_template: *prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types_1
+      format_prompt_type: *format_prompt_type
       llm: alibaba/Qwen2-72B-Instruct
       api_key: sk-lsfjohamzsiaojqffmuagcgveqicoaftfnnwcijqyrarcnnp
       api_base: https://api.siliconflow.cn/v1
