--- a/examples/RAGraft/configs/xinhai_rag_sequential_noop_chroma.yaml
+++ b/examples/RAGraft/configs/xinhai_rag_sequential_noop_chroma.yaml
@@ -21,7 +21,7 @@ rag:
         encode_kwargs:
           normalize_embeddings: false
       index_path: /data/indexes/bge-index
-  refiner:
+  augmentor:
     type: noop
     system_prompt_template: "Answer the question based on the given document. \
     Only give me the answer and do not output any other words. \
